--- a/users.service/package.json
+++ b/users.service/package.json
@@ -1,21 +1,84 @@
 {
   "name": "users.service",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Chandresh Rajkumar Manonmani <chandresh.rm@gmail.com> (http://chandreshrm.name)",
+  "author": "Chandresh Rajkumar Manonmani <chandresh.rm@gmail.com> <cs1193@gmail.com> (http://chandreshrm.name)",
   "license": "UNLICENSED",
   "dependencies": {
+    "bluebird": "^3.5.0",
+    "body-parser": "1.17.2",
+    "compression": "^1.7.0",
+    "cookie-parser": "^1.4.3",
     "cors": "2.8.4",
-    "express": "4.15.4",
+    "debug": "^2.6.8",
+    "express": "4.15.3",
+    "express-jwt": "^5.3.0",
+    "express-paginate": "0.3.0",
+    "express-validation": "^1.0.2",
+    "express-winston": "^2.4.0",
     "helmet": "3.8.1",
+    "http-status": "^1.0.1",
+    "jsonwebtoken": "7.4.1",
     "lodash": "4.17.4",
+    "method-override": "^2.3.9",
+    "mongoose": "4.11.4",
+    "mongoose-paginate": "5.0.3",
     "morgan": "1.8.2",
-    "pg": "7.1.2",
-    "pg-hstore": "2.3.2",
-    "sequelize": "4.4.10"
+    "qs": "6.5.0",
+    "winston": "^2.3.1"
+  },
+  "scripts": {
+    "test": "node ./node_modules/karma/bin/karma start --single-run",
+    "build": "node ./node_modules/webpack/bin/webpack.js --config ./webpack.config.js --progress --colors",
+    "start": "node ./build/lib.js",
+    "preversion": "git checkout master",
+    "postversion": "git push origin master && git push origin master --tags"
+  },
+  "devDependencies": {
+    "babel-core": "6.25.0",
+    "babel-eslint": "7.2.3",
+    "babel-loader": "7.1.1",
+    "babel-plugin-syntax-async-functions": "6.13.0",
+    "babel-plugin-syntax-flow": "6.18.0",
+    "babel-plugin-transform-decorators-legacy": "1.3.4",
+    "babel-plugin-transform-flow-strip-types": "6.22.0",
+    "babel-plugin-transform-regenerator": "6.24.1",
+    "babel-plugin-transform-runtime": "6.23.0",
+    "babel-polyfill": "6.23.0",
+    "babel-preset-env": "1.5.2",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
+    "benchmark": "2.1.4",
+    "chai": "4.0.2",
+    "cucumber": "2.3.1",
+    "eslint": "4.1.1",
+    "eslint-loader": "1.8.0",
+    "flow-bin": "0.49.1",
+    "git-repository": "0.1.4",
+    "heapdump": "0.3.9",
+    "istanbul": "0.4.5",
+    "istanbul-instrumenter-loader": "2.0.0",
+    "jenkins": "0.20.0",
+    "json-loader": "0.5.4",
+    "karma": "1.7.0",
+    "karma-babel-preprocessor": "6.0.1",
+    "karma-chai": "0.1.0",
+    "karma-coverage": "1.1.1",
+    "karma-junit-reporter": "1.2.0",
+    "karma-mocha": "1.3.0",
+    "karma-mocha-reporter": "2.2.3",
+    "karma-phantomjs-launcher": "1.0.4",
+    "karma-sinon": "1.0.5",
+    "karma-sourcemap-loader": "0.3.7",
+    "karma-spec-reporter": "0.0.31",
+    "karma-webpack": "2.0.3",
+    "mocha": "3.4.2",
+    "null-loader": "0.1.1",
+    "phantomjs-prebuilt": "2.1.14",
+    "rimraf": "2.6.1",
+    "sinon": "2.3.6",
+    "sinon-mongoose": "2.0.2",
+    "webpack": "3.0.0"
   }
 }
