--- a/users.service/package.json
+++ b/users.service/package.json
@@ -11,6 +11,7 @@
     "compression": "^1.7.0",
     "cookie-parser": "^1.4.3",
     "cors": "2.8.4",
+    "cross-spawn": "5.1.0",
     "debug": "^2.6.8",
     "express": "4.15.3",
     "express-jwt": "^5.3.0",
@@ -21,12 +22,14 @@
     "http-status": "^1.0.1",
     "jsonwebtoken": "7.4.1",
     "lodash": "4.17.4",
+    "log4js": "2.3.3",
     "method-override": "^2.3.9",
-    "mongoose": "4.11.4",
-    "mongoose-paginate": "5.0.3",
     "morgan": "1.8.2",
+    "pg": "7.1.2",
+    "pg-hstore": "2.3.2",
     "qs": "6.5.0",
-    "winston": "^2.3.1"
+    "sequelize": "4.5.0",
+    "sequelize-cli": "2.8.0"
   },
   "scripts": {
     "test": "node ./node_modules/karma/bin/karma start --single-run",
