--- a/users.service/package.json
+++ b/users.service/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "bluebird": "^3.5.0",
     "body-parser": "1.17.2",
+    "co": "4.6.0",
     "compression": "^1.7.0",
     "cookie-parser": "^1.4.3",
     "cors": "2.8.4",
@@ -29,14 +30,16 @@
     "pg-hstore": "2.3.2",
     "qs": "6.5.0",
     "sequelize": "4.5.0",
-    "sequelize-cli": "2.8.0"
+    "sequelize-cli": "2.8.0",
+    "yargs": "8.0.2"
   },
   "scripts": {
     "test": "node ./node_modules/karma/bin/karma start --single-run",
     "build": "node ./node_modules/webpack/bin/webpack.js --config ./webpack.config.js --progress --colors",
     "start": "node ./build/lib.js",
     "preversion": "git checkout master",
-    "postversion": "git push origin master && git push origin master --tags"
+    "postversion": "git push origin master && git push origin master --tags",
+    "db:init": "node ./scripts/database.js init"
   },
   "devDependencies": {
     "babel-core": "6.25.0",
